# srfm-paper-impl

./: .gitignore  LICENSE  README.md  generate_all.py  pyproject.toml  requirements.txt
notebooks/: reproduce_figures.ipynb
rust/: Cargo.toml
rust/src/: main.rs
src/figures/: fig1_spacetime_diagram.py  fig2_lorentz_factor_surface.py  fig3_regime_distributions.py  fig4_variance_ratio_heatmap.py  fig5_geodesic_deviation.py  fig6_cumulative_pnl.py  fig7_covariance_manifold.py  fig8_module_pipeline.py
