[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srfm-paper-impl"
version = "0.1.0"
description = "Reproducible research code for the SRFM paper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pandas>=2.1",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0", "notebook>=7.0", "ipykernel>=6.0"]
srfm    = ["srfm @ git+https://github.com/Mattbusel/srfm-python.git"]
all     = ["srfm-paper-impl[notebook,srfm]"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
